--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/*
+  2. Remove default margin
+*/
+* {
+    margin: 0;
+}
+
+/*
+  Typographic tweaks!
+  3. Add accessible line-height
+  4. Improve text rendering
+*/
+body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -40,4 +63,25 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+::-webkit-input-placeholder {
+	opacity: 1 !important;
+}
+::-moz-placeholder {
+	opacity: 1 !important;
+}
+input:focus {
+	outline: none;
+}
+/* input:focus::-webkit-input-placeholder {
+	color: transparent;
+	opacity: 0;
+}
+input:focus::-moz-placeholder {
+	color: transparent;
+	opacity: 0;
+} */
+input:-moz-placeholder {
+	color: transparent;
+	opacity: 0;
 }
