--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,6 +22,14 @@
 	margin-top: 40px;
 	position: relative;
 }
+.noTasks{
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1040px;
+	height: 100%;
+	margin-top: 40px;
+    font: normal 600 38px $f;
+}
 .clear {
     display: flex;
     align-items: center;
