--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,12 +5,18 @@
 	margin: 0 auto;
 	height: 100%;
 	min-height: calc(100dvh - 100px);
+	@media(max-width: 768px){
+		padding: 20px 15px;
+	}
 }
 .new {
 	display: flex;
 	justify-content: space-around;
 }
-.tasks {
+.tasksContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	margin: 0 auto;
     padding: 0 50px;
 	background: #f1ece6;
@@ -21,6 +27,12 @@
 	height: 100%;
 	margin-top: 40px;
 	position: relative;
+	@media(max-width: 768px){
+		padding: 0 25px;
+		min-height: 300px;
+	}
+}
+.tasks{
 }
 .noTasks{
 	margin: 0 auto;
@@ -33,6 +45,7 @@
 .clear {
     display: flex;
     align-items: center;
+	align-self: end;
     gap: 10px;
 	border: none;
 	background: transparent;
@@ -41,7 +54,12 @@
 	color: #d98326;
 	font: normal 400 24px $f;
     cursor: pointer;
-    position: absolute;
-    bottom: 0;
-    right: 50px;
+}
+@media(max-width: 768px) {
+	.clear svg{
+		transform: scale(.5);
+	}
+	.clear{
+		font: normal 400 16px $f;
+	}
 }
