--- a/src/components/task/TaskItem.module.scss
+++ b/src/components/task/TaskItem.module.scss
@@ -4,7 +4,14 @@
 	width: 100%;
 	height: 88px;
 	font: normal 400 32px $f;
-	padding: 20px 0 20px 5px;
+	padding: 20px 0;
+	@media(max-width: 768px){
+		font: normal 400 22px $f;
+		padding: 20px 0;
+	}
+	@media(max-width: 540px){
+		font: normal 400 18px $f;
+	}
 }
 .taskContent {
 	display: flex;
@@ -13,7 +20,7 @@
 }
 .separator {
 	margin: 0 auto;
-	width: 86%;
+	width: calc(100% - 76px - 38px);
 	height: 1px;
 	background: #76b7cd;
 }
@@ -33,11 +40,19 @@
 	border: 4.5px solid #737373;
 	border-radius: 200px;
 	flex-shrink: 0;
+	@media(max-width: 540px){
+		transform: scale(0.75);
+	}
 }
 .checkboxDone {
-	width: 46px;
-	height: 46px;
+	@media(max-width: 540px){
+		transform: scale(0.75);
+	}
 }
 svg {
 	cursor: pointer;
+}
+button{
+	border: none;
+	background: transparent;
 }
